[project]
name = "llm-fragments-pypi"
version = "0.1.0"
description = "LLM fragments plugin for PyPI packages metadata"
authors = [{ name = "Samuel Dion-Girardeau"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1",
    "llm>=0.24",
]

[project.entry-points.llm]
fragments_pypi = "llm_fragments_pypi"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "pytest>=8.3.5,<9",
    "ruff>=0.11.5,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = 'py310'
line-length = 119

[tool.ruff.lint]
select = [
    'B',
    'C4',
    'C90',
    'E',
    'F',
    'FBT',
    'I',
    'INP',
    'Q',
    'N',
    'PD',
    'RUF',
    'S',
    'SIM',
    'T10',
    'T20',
    'UP',
    'W',
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]


[tool.ruff.lint.isort]
force-single-line = true
