[project]
name = "llm-fragments-pypi"
version = "0.1.1"
description = "LLM fragments plugin for PyPI packages metadata"
authors = [{ name = "Samuel Dion-Girardeau"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1",
    "llm>=0.24",
]
keywords = ["llm", "llm-fragments", "pypi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/samueldg/llm-fragments-pypi"
Repository = "https://github.com/samueldg/llm-fragments-pypi"
Changelog = "https://github.com/samueldg/llm-fragments-pypi/releases"
Issues = "https://github.com/samueldg/llm-fragments-pypi/issues"
CI = "https://github.com/samueldg/llm-fragments-pypi/actions"

[project.entry-points.llm]
fragments_pypi = "llm_fragments_pypi"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "pytest>=8.3.5,<9",
    "ruff>=0.11.5,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = 'py310'
line-length = 119

[tool.ruff.lint]
select = [
    'B',
    'C4',
    'C90',
    'E',
    'F',
    'FBT',
    'I',
    'INP',
    'Q',
    'N',
    'PD',
    'RUF',
    'S',
    'SIM',
    'T10',
    'T20',
    'UP',
    'W',
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]


[tool.ruff.lint.isort]
force-single-line = true
